# tiny-coder

./: .gitignore  01-data.ipynb  01-tokenizer.ipynb  02-dataset.ipynb  02-model.ipynb  03-model.ipynb  03-train.ipynb  README.md  bpe_tokenizer.py  data.py  dataset.ipynb  download_python_edu.py  model.py  prepare_data.py  pyproject.toml  pyrightconfig.json  requirements.txt  tiny_coder_notebook.ipynb
data/scripts/: __init__.py  constants.py  dedup.py  io_utils.py  python_cleaning.py  shards.py  sources.py  tokenizers.py
tests/: test_pipeline.py
