[project]
name = "tiny-coder"
version = "0.1.0"
description = "Training an python focused coding LLM from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=5.0.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "polars>=1.42.1",
    "requests>=2.34.2",
    "torch>=2.12.1",
]
